<resources>
    <string name="app_name">WithWine</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="share_with_friend">Share with Friends</string>
    <string name="abount_with_wine">About WithWine</string>
    <string name="return_and_refund">Return and Refunds Policy</string>
    <string name="term_of_use">Term of Use</string>
    <string name="loading_message">loading .....</string>
    <string name="title_activity_register">RegisterActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry_message">Something went wrong. Please retry again laster!</string>
    <string name="network_error">Problem connecting to the internet. Please try again later!</string>
    <string name="default_country_code">+61</string>
    <string name="phone_number_registration_help_text">We use your phone number to sync with your contact list</string>
    <string name="unauthorized_error">You are not authorised to access this information</string>
    <string name="generic_error">Oops, something went wrong. Please try again</string>
    <string name="no_end_point_error">404 - Resource you are looking for not found</string>
    <string name="title_activity_winery">WineryActivity</string>
    <string name="winery_tab_title_1">NEAR ME</string>
    <string name="winery_tab_title_2">A-Z</string>
</resources>
