<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/sign_in"
            android:title="@string/sign_in"/>
        <item
            android:id="@+id/create_account"
            android:title="@string/create_account"/>
        <item
            android:id="@+id/share_with_friend"
            android:title="@string/share_with_friend"/>

        <item
            android:id="@+id/about_withwine"
            android:title="@string/abount_with_wine"/>

        <item
            android:id="@+id/return_and_refund"
            android:title="@string/return_and_refund"/>

        <item
            android:id="@+id/term_of_use"
            android:title="@string/term_of_use"/>
    </group>

</menu>